# cinema-react-app/gen/api/src/apis/DefaultApi.ts
@@ -1,65 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Music service
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 0.1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-import * as runtime from '../runtime';
-import {
-    ErrorResponse,
-    ErrorResponseFromJSON,
-    ErrorResponseToJSON,
-    Film,
-    FilmFromJSON,
-    FilmToJSON,
-} from '../models';
-
-export interface RatefilmRequest {
-    date?: string;
-}
-
-/**
- * 
- */
-export class DefaultApi extends runtime.BaseAPI {
-
-    /**
-     * Returns list of ratefilm decription
-     */
-    async ratefilmRaw(requestParameters: RatefilmRequest): Promise<runtime.ApiResponse<Array<Film>>> {
-        const queryParameters: any = {};
-
-        if (requestParameters.date !== undefined) {
-            queryParameters['date'] = requestParameters.date;
-        }
-
-        const headerParameters: runtime.HTTPHeaders = {};
-
-        const response = await this.request({
-            path: `/ratefilm`,
-            method: 'GET',
-            headers: headerParameters,
-            query: queryParameters,
-        });
-
-        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(FilmFromJSON));
-    }
-
-    /**
-     * Returns list of ratefilm decription
-     */
-    async ratefilm(requestParameters: RatefilmRequest): Promise<Array<Film>> {
-        const response = await this.ratefilmRaw(requestParameters);
-        return await response.value();
-    }
-
-}
