# cinema-react-app/gen/api/src/models/index.ts
@@ -1,2 +1,0 @@
-export * from './ErrorResponse';
-export * from './Film';
